# managed-agent-control-mcp

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  glama.json  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  nightly.yml  release.yml  security.yml
.playwright-mcp/: page-2026-06-03T10-14-43-319Z.yml  page-2026-06-03T10-15-52-872Z.yml  page-2026-06-03T10-16-14-508Z.yml  page-2026-06-03T10-16-33-164Z.yml  page-2026-06-03T10-16-51-363Z.yml  page-2026-06-03T10-17-14-089Z.yml  page-2026-06-03T10-17-43-349Z.yml  page-2026-06-03T10-18-00-520Z.yml  page-2026-06-03T10-18-20-955Z.yml  page-2026-06-03T10-18-41-066Z.yml  page-2026-06-03T10-19-10-276Z.yml  page-2026-06-03T10-19-55-968Z.yml
deploy/: Dockerfile
deploy/aws-lambda/: Dockerfile  README.md  main.tf  outputs.tf  variables.tf
docs/: architecture.md  authentication.md  configuration.md  deployment.md  testing.md  tools.md
examples/: README.md
examples/fly-io-workos-oauth/: .env.example  README.md  fly.toml
scripts/: smoke-deployed.py
src/managed_agents_mcp/: __init__.py  __main__.py  client.py  config.py  guardrails.py  lambda_handler.py  server.py
src/managed_agents_mcp/app/: __init__.py  asgi.py  oauth_routes.py  run.py  ssm.py
src/managed_agents_mcp/app/auth/: __init__.py  base.py  bearer.py  cognito.py  factory.py  oidc.py
tests/: conftest.py
tests/acceptance/: test_acceptance.py
tests/fakes/: managed_agents.py
tests/live/: test_live.py
tests/scenarios/: test_scenarios.py
tests/security/: test_auth_matrix.py  test_middleware_boundary.py
tests/transport/: test_transport.py
tests/unit/: test_auth.py  test_client.py  test_config.py  test_guardrails.py
