[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "managed-agent-control-mcp"
version = "0.1.0"
description = "MCP server to start, observe, and interact with Claude Managed Agents from any MCP client (Claude.ai, Claude Code, and more)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
authors = [{ name = "Andrei Svirida" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "anthropic",
    "managed-agents",
    "agents",
    "claude-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0.0,<4",
    "httpx>=0.27,<1",
    "pyjwt[crypto]>=2.8,<3",
    "starlette>=0.37,<2",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
# AWS Lambda deployment only — not needed for local stdio or generic container runs.
lambda = [
    "mangum>=0.17,<1",
    "boto3>=1.35,<2",
]
dev = [
    "ruff>=0.6,<1",
    "pyright>=1.1,<2",
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5,<8",
    "respx>=0.21,<1",
    "asgi-lifespan>=2,<3",
]
# Only the L4 scenario tier (tests/scenarios/) needs the Anthropic SDK to drive a
# real model. Kept separate so the core has zero Anthropic-SDK dependency.
scenarios = [
    "anthropic>=0.40,<1",
]

[project.scripts]
managed-agent-control-mcp = "managed_agents_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/modus-agendi/managed-agent-control-mcp"
Repository = "https://github.com/modus-agendi/managed-agent-control-mcp"
Issues = "https://github.com/modus-agendi/managed-agent-control-mcp/issues"
"Managed Agents API" = "https://platform.claude.com/docs/en/managed-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/managed_agents_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/managed_agents_mcp/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501", # line-too-long — formatter handles it
]

[tool.ruff.lint.per-file-ignores]
# Tests use assert (S101) and may hardcode dummy tokens/secrets (S105/S106/S107).
"tests/**" = ["S101", "S105", "S106", "S107"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["tests"]
exclude = ["**/__pycache__", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedImport = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Put tests/ on sys.path so test-support packages (e.g. `fakes`) import cleanly
# without making `tests` itself a package.
pythonpath = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "live: tests that hit the real Anthropic Managed Agents API (requires ANTHROPIC_API_KEY + a test agent/environment; bills tokens)",
    "scenarios: LLM-as-judge tests that drive a real model (requires RUN_SCENARIOS + ANTHROPIC_API_KEY; bills tokens)",
]

[tool.coverage.run]
source = ["src/managed_agents_mcp"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 1
